--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,24 +18,22 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-      with:
-        arguments: build
-    - name: Test coverage
-      id: jacoco
-      uses: madrapps/jacoco-report@v1.3
-      with:
-        token: ${{ secrets.JACOCO }}
-        path: ${{github.workspace}}/build/reports/jacoco/test/jacocoTestReport.xml
-        min-coverage-overall: 66
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+        with:
+          arguments: build
+
+      - name: Add coverage to PR
+        id: jacoco
+        uses: madrapps/jacoco-report@v1.3
+        with:
+          paths: ${{ github.workspace }}/build/reports/jacoco/test/jacocoTestCoverage.xml
+          token: ${{ secrets.GITHUB_TOKEN }}
